13E08E25D_04P27, fix link visible on big screen issue

--- a/Client/src/Component/Header/Header.css
+++ b/Client/src/Component/Header/Header.css
@@ -9,7 +9,7 @@ header {
     align-items: center;
     justify-items: center;
 
-    position: sticky;
+    position: fixed;
     z-index: 9999;
     top: 5px;
 }
