--- a/Client/src/Pages/Main/Main.css
+++ b/Client/src/Pages/Main/Main.css
@@ -1,5 +1,5 @@
 main {
-    margin-top: 1.5rem;
+    margin-top: 5rem;
     width: 100%;
 
     display: flex;
@@ -117,7 +117,7 @@ main {
 
 .intro-content .about-myself {
     width: 80%;
-    font-size: 12px;
+    font-size: 13px;
 
     border-bottom: 0.5px solid rgb(200, 200, 200);
 }
