--- a/Client/src/Pages/Main/Responsive-Main.css
+++ b/Client/src/Pages/Main/Responsive-Main.css
@@ -47,6 +47,8 @@
     .intro-content .about-myself {
         width: 95%;
         padding: 0 1rem;
+
+        font-size: 14px;
         
         border-bottom: none;
     }
